# assertions

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: assertions.rs  combinators.rs  diff.rs  error.rs  expect.rs  lib.rs  macros.rs  metadata.rs  prelude.rs  specialization.rs  styles.rs
src/.experimenting/: combinators.rs  error.rs  lib.rs  root.rs  specialization.rs  v3.rs  v4.rs
src/.experimenting/combinators/: at_path.rs  count.rs  err.rs  when_called.rs
src/.experimenting/combinators2/: combinator.rs  count.rs  identity.rs
src/.experimenting/extensions/: iterators.rs
src/.experimenting/specialization/: at_path.rs
src/.experimenting/v10/combinators/: any.rs  not.rs
src/.experimenting/v11/assertions/: assertion.rs
src/.experimenting/v11/combinators/: all.rs  combinator_ext.rs
src/.experimenting/v11/specialization/: at_path.rs  root.rs  wrapper.rs
src/.experimenting/v6/: all.rs  combinator.rs  not.rs
src/.experimenting/v7/: combinator.rs
src/.experimenting/v9/: assertions.rs  output.rs  prelude.rs  third_party.rs  thoughts.md
src/.experimenting/v9/combinators/: any.rs  combinator.rs  combinator_ext.rs  not.rs
src/assertions/: annotated.rs  assertion.rs  async_read.rs  context.rs  error.rs  functions.rs  futures.rs  general.rs  iterators.rs  options.rs  pointers.rs  read.rs  results.rs  strings.rs
src/assertions/async_read/: extensions.rs  modifiers.rs
src/assertions/async_read/modifiers/: when_read.rs
src/assertions/async_read/outputs/: when_read.rs
src/assertions/functions/: apply.rs  assertions.rs  extensions.rs  modifiers.rs
src/assertions/functions/assertions/: to_panic.rs
src/assertions/functions/modifiers/: when_called.rs
src/assertions/futures/: extensions.rs  finalized_output_future.rs  inverted_output_future.rs  merged_output_future.rs  modifiers.rs  outputs.rs  when_ready_future.rs
src/assertions/futures/outputs/: merged.rs  (+5 more)
src/assertions/general/: assertions.rs  comparisons.rs  extensions.rs  finalizable_result.rs  invertible_result.rs  modifiers.rs  outputs.rs
src/assertions/iterators/: assertions.rs  extensions.rs  mergeable_result.rs  modifiers.rs  outputs.rs
src/assertions/options/: extensions.rs  modifiers.rs  optionish.rs
src/assertions/pointers/: assertions.rs  extensions.rs  modifiers.rs  pointer_like.rs
src/assertions/read/: extensions.rs  modifiers.rs
src/assertions/results/: assertions.rs  extensions.rs  modifiers.rs  resultish.rs
src/assertions/strings/: assertions.rs  extensions.rs  modifiers.rs
src/combinators/: all.rs  any.rs  count.rs  map.rs  not.rs  nth.rs  some.rs  when_ready.rs
src/experimenting/: combinators2.rs  expect.rs  extensions.rs  v5.rs  v6.rs  v8.rs
src/experimenting/combinators/: all.rs  ok.rs
src/experimenting/combinators2/: aggregate.rs  plan.rs  when_ready.rs
src/experimenting/v10/: combinators.rs
src/experimenting/v11/: combinators.rs  expect.rs  failure.rs  specialization.rs
src/experimenting/v6/: assertion.rs
src/experimenting/v7/: all.rs  assertion.rs  error.rs  not.rs
src/experimenting/v9/: combinators.rs  expect.rs  lib.rs
src/metadata/: annotated.rs  source_loc.rs
src/specialization/: annotated.rs  annotated_autoderef.rs  wrapper.rs
tests/: error_messages.rs  examples.rs  readme.rs  readme_example.rs  simple.rs
(+50 files in other folders)
