[package]
name = "expecters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = [
    "asynchronous",
    "development-tools",
    "development-tools::debugging",
    "development-tools::testing",
]
keywords = ["assert", "assertions", "matchers", "testing"]

[features]
default = ["futures"]
futures = ["dep:futures"]

[dependencies]
futures = { version = "0.3.30", optional = true, default-features = false, features = [
    "std",
    "async-await",
] }
pin-project-lite = "0.2.14"

[dev-dependencies]
futures = { version = "0.3.30", default-features = false, features = [
    "std",
    "async-await",
    "executor",
] }
test-case = "3.3.1"
tokio = { version = "1", features = ["macros", "test-util"] }
