[package]
name = "expecters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = [
    "asynchronous",
    "development-tools",
    "development-tools::debugging",
    "development-tools::testing",
]
keywords = ["assert", "assertions", "async", "matchers", "testing"]
rust-version = "1.80.1"
publish = false # TODO: remove this when ready to publish

[features]
default = ["colors", "futures", "regex"]
colors = ["dep:owo-colors"]
futures = ["dep:futures", "dep:pin-project-lite"]
regex = ["dep:regex"]

[dependencies]
futures = { version = "0.3.30", optional = true, default-features = false, features = [
    "std",
    "async-await",
] }
owo-colors = { version = "4.0.0", features = [
    "supports-colors",
], optional = true }
pin-project-lite = { version = "0.2.14", optional = true }
regex = { version = "1.10.6", optional = true }

[dev-dependencies]
test-case = "3.3.1"
tokio = { version = "1", features = ["macros", "test-util"] }
