[package]
name = "expecters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "development-tools", "development-tools::testing"]
keywords = ["assert", "assertions", "async", "matchers", "testing"]
rust-version = "1.82.0"
# TODO: remove this when ready to publish
publish = false

[features]
default = ["colors", "diff", "futures", "regex"]
colors = ["dep:owo-colors"]
futures = ["dep:futures", "dep:pin-project-lite"]
regex = ["dep:regex"]
diff = ["dep:diff"]

[dependencies]
diff = { version = "0.1.13", optional = true }
futures = { version = "0.3.30", optional = true, default-features = false, features = [
    "std",
    "async-await",
] }
owo-colors = { version = "4.0.0", features = [
    "supports-colors",
], optional = true }
pin-project-lite = { version = "0.2.14", optional = true }
regex = { version = "1.11.1", optional = true }

[dev-dependencies]
test-case = "3.3.1"
tokio = { version = "1.41.1", features = ["macros", "test-util"] }

[lints.rust]
unsafe_code = "forbid"

missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
module_name_repetitions = "allow"
